[package]
name = "dank-image"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dither = "=1.3.6"
image = {version = "0.23", features = ["webp"]}

reqwest = {version = "0.11.12", features = ["rustls-tls"], default-features = false}

lazy_static = "1.4.0"