[package]
name = "dank-server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

dank-image = {path = "../dank-image"}

reqwest = "0.11.12"
anyhow = "1"
serde = {version =  "1", features = ["derive"]}
serde_json = "1"

rand = "0.8"